[Add] Correct styles for login layout on mobile devices.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -20,6 +20,10 @@ h1, h2, h3, h4, h5, h6, p {
     outline: none !important;
 }
 
+.row {
+    margin: 0;
+}
+
 .content-area {
     padding: 10px;
 
