--- a/app/assets/stylesheets/users/new.css.scss
+++ b/app/assets/stylesheets/users/new.css.scss
@@ -1,72 +1,13 @@
 @import "../manifest";
 
 
-.signup-header {
-    position: relative;
-    height: 10%;
-
-    h3 {
-        width: 100%;
-        margin: 0;
-
-        line-height: inherit;
-        text-align: center;
-    }
-}
-
 .signup-content {
-    position: relative;
-    height: 90%;
-
     .form-panel {
-        display: table;
-        z-index: 1;
-        height: 100%;
-        padding: 0 40px;
-
-        form {
-            display: table-cell;
-            vertical-align: middle;
-            text-align: center;
-
-            .field-label > .glyphicon {
-                margin-right: 5px;
-            }
-        }
-
-        .form-group {
-            text-align: left;
-        }
-        .form-group-email {
-            color: #DA9292;
-        }
         .form-group-name {
             color: rgb(120, 206, 151);
         }
-        .form-group-password {
-            color: #6EAEC7;
-        }
         .form-group-password-confirm {
             color: #6EAEC7;
-        }
-        .btn-signup {
-            width: 130px;
-
-            border-color: #CFA5D1;
-
-            color: #9C3498;
-
-            &:focus {
-                background-color: #FFFFFF;
-            }
-            &:hover {
-                background-color: rgb(250, 242, 250);
-            }
-            &:active {
-                background-color: rgb(250, 242, 250);
-
-                @include box-shadow(inset 0 3px 5px rgba(185, 93, 163, 0.125));
-            }
         }
     }
 }
